Navigation bar added to edit buyer info text align fixed

--- a/Agent/addOrEditInfo.css
+++ b/Agent/addOrEditInfo.css
@@ -18,6 +18,7 @@
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+  text-align: center;
 }
 #button {
   font-family: "Roboto", sans-serif;
